--- a/bubble-animation/application-mainfest/namespace.yaml
+++ b/bubble-animation/application-mainfest/namespace.yaml
@@ -1,1 +1,6 @@
-
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: bubble-animation
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
